# voice-agent

./: .gitignore  README.md  app.py  pyproject.toml
agents/: local_llm.py  router.py  synthesizer.py  validator.py  web_search.py
core/: graph.py  stt.py
utils/: audio.py  prompts.py
