[project]
name = "voice-agent"
version = "0.1.0"
description = "A voice-first local AI assistant with multi-agent routing"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "faster-whisper>=1.0.3",
    "sounddevice>=0.5.1",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "streamlit>=1.45.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langgraph>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=1.7.2",
    "ddgs>=9.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
